tests/neg/i903.scala
object Test {
  def test2 =
    "".contains("", (_: Int)) // error
}
